--- a/distribution/docs/src/main/resources/content/_metadataReference/security-attributes-table.adoc
+++ b/distribution/docs/src/main/resources/content/_metadataReference/security-attributes-table.adoc
@@ -19,28 +19,28 @@
 
 |[[security.access-groups]]security.access-groups
 |Attribute name for storing groups to enforce access
-controls upon that will enable a user to read and write a metacard.
+controls upon that enable a user to read and write a metacard.
 |List of Strings
 |< 1024 characters per entry
 |
 
 |[[security.access-individuals]]security.access-individuals
 |Attribute name for storing the email addresses of users to
-enforce access controls upon that will enable the ability to read and write a metacard.
+enforce access controls upon that enable the ability to read and write a metacard.
 |List of Strings
 |A valid email address per RFC 5322.
-| 
+|
 
 |[[security.access-individuals-read]]security.access-individuals-read
 |Attribute name for storing the email addresses of users to
 enforce access controls upon that can read, but not explicitly write to a metacard.
 |List of Strings
 |A valid email address per RFC 5322.
-| 
+|
 
 |[[security.access-groups-read]]security.access-groups-read
 |Attribute name for storing groups to enforce access
-controls upon that will enable a user to read, but not necessarily write to a metacard.
+controls upon that enable a user to read, but not necessarily write to a metacard.
 |List of Strings
 |< 1024 characters per entry
 |
