removed future tense from reference docs

--- a/distribution/docs/src/main/resources/content/_reference/_tables/CatalogBackupPlugin.adoc
+++ b/distribution/docs/src/main/resources/content/_reference/_tables/CatalogBackupPlugin.adoc
@@ -26,7 +26,7 @@
 |Subdirectory levels
 |subDirLevels
 |Integer
-|Number of subdirectory levels to create. Two characters from the ID will be used to name each subdirectory level.
+|Number of subdirectory levels to create. Two characters from the ID are used to name each subdirectory level.
 |2
 |true
 
