--- a/distribution/docs/src/main/resources/content/_reference/_tables/CatalogFrameworkImpl.adoc
+++ b/distribution/docs/src/main/resources/content/_reference/_tables/CatalogFrameworkImpl.adoc
@@ -34,7 +34,7 @@
 |Fanout tag blacklist
 |fanoutTagBlacklist
 |String
-|Ingest operations with tags in this list will be rejected.
+|Ingest operations with tags in this list are rejected.
 |
 |true
 
