--- a/distribution/docs/src/main/resources/content/_reference/_tables/FacetWhitelist.adoc
+++ b/distribution/docs/src/main/resources/content/_reference/_tables/FacetWhitelist.adoc
@@ -20,7 +20,7 @@
 |facetAttributeWhitelist
 |String
 |Attributes that can be faceted against through the catalog framework.
-Caution: Suggestion values are not protected by any security. Only choose attributes whose values will be safe for all users to view.
+Caution: Suggestion values are not protected by any security. Only choose attributes whose values are safe for all users to view.
 |
 |false
 
