--- a/distribution/docs/src/main/resources/content/_reference/_tables/MetacardAttributePlugin.adoc
+++ b/distribution/docs/src/main/resources/content/_reference/_tables/MetacardAttributePlugin.adoc
@@ -29,7 +29,7 @@
              The strategy for combining the values is intersection, which means only the
              values common to all source attribute are added to the destination attribute.
              Note: Do not use the same destination attributes in both the Intersect and Union
-             rule sets. The plugin will behave unpredictably.
+             rule sets. The plugin behaves unpredictably.
 |none
 |false
 
@@ -46,7 +46,7 @@
              The strategy for combining the values is union, which means only all the values
              of the source attribute are added to the destination attribute (excluding duplicates)
              Note: Do not use the same destination attributes in both the Intersect and Union
-             rule sets. The plugin will behave unpredictably.
+             rule sets. The plugin behaves unpredictably.
 |none
 |false
 
