--- a/distribution/docs/src/main/resources/content/_reference/_tables/platform.ui.config.adoc
+++ b/distribution/docs/src/main/resources/content/_reference/_tables/platform.ui.config.adoc
@@ -40,7 +40,7 @@
 |Show System Usage Message once per session
 |systemUsageOncePerSession
 |Boolean
-|With this selected, the system usage message will be shown once for each browser session. Uncheck this to have the usage message appear every time the search window is opened or refreshed.
+|With this selected, the system usage message is shown once for each browser session. Uncheck this to have the usage message appear every time the search window is opened or refreshed.
 |true
 |true
 
@@ -75,7 +75,7 @@
 |Session Timeout
 |timeout
 |Integer
-|Specifies the length of inactivity (in minutes) that will cause a user to be logged out automatically. This value must be 2 minutes or greater, as users are warned when only 1 minute remains. If a value of less than 2 minutes is used, the timeout is set to the default time of 15 minutes.
+|Specifies the length of inactivity (in minutes) that causes a user to be logged out automatically. This value must be 2 minutes or greater, as users are warned when only 1 minute remains. If a value of less than 2 minutes is used, the timeout is set to the default time of 15 minutes.
 
 |15
 |true
