--- a/distribution/docs/src/main/resources/content/_reference/_tables/sts.adoc
+++ b/distribution/docs/src/main/resources/content/_reference/_tables/sts.adoc
@@ -19,7 +19,7 @@
 |SAML Assertion Lifetime
 |lifetime
 |Long
-|Set the number of seconds that an issued SAML assertion will be good for.
+|Set the number of seconds that an issued SAML assertion is valid.
 |1800
 |true
 
