--- a/distribution/docs/src/main/resources/content/_reference/_appReferences/mg-spatial.adoc
+++ b/distribution/docs/src/main/resources/content/_reference/_appReferences/mg-spatial.adoc
@@ -14,7 +14,7 @@ The ${ddf-spatial} Application provides KML transformer and a KML network link e
 In the ${ddf-spatial} Application, the `offline-gazetteer` is installed by default.
 This feature enables you to use an offline source of GeoNames data (as an alternative to the GeoNames Web service enabled by the `webservice-gazetteer` feature) to perform searches via the gazetteer search box in the Search UI.
 
-Installing the `offline-gazetteer-index` feature will provide a small set of GeoNames data to use with the offline gazetteer. The GeoNames data is stored as metacards in the core catalog and are tagged with `geonames` and `gazetteer`. This collection of GeoNames metacards can be expanded or updated by using the `gazetteer:update` command.
+Installing the `offline-gazetteer-index` feature provides a small set of GeoNames data to use with the offline gazetteer. The GeoNames data is stored as metacards in the core catalog and are tagged with `geonames` and `gazetteer`. This collection of GeoNames metacards can be expanded or updated by using the `gazetteer:update` command.
 
 ==== ${ddf-spatial} Gazetteer Console Commands
 
@@ -31,12 +31,12 @@ The `gazetteer` commands provide the ability to interact with the local GeoNames
 
 The resource argument can be one of three types:
 
-* a local file path to a `.txt`, `.zip`, or `.geo.json` GeoNames data file. If a path to a file ends in .geo.json, it will processed as a geoJSON feature collection and imported as supplementary shape data for GeoNames entries.
+* a local file path to a `.txt`, `.zip`, or `.geo.json` GeoNames data file. If a path to a file ends in .geo.json, it is processed as a geoJSON feature collection and imported as supplementary shape data for GeoNames entries.
 * a URL to a `.txt` or `.zip` GeoNames data file. GeoJSON URLs are not supported.
 * a keyword to automatically process a GeoNames file from from http://download.geonames.org/export/dump. Valid keywords include
-  ** a country code, which will add the country as GeoNames metacards in the core catalog. The full list of country codes available can be found in http://download.geonames.org/export/dump/countryInfo.txt.
-  ** `cities1000`, `cities5000`, and `cities15000`, which will add cities to the index that have at least 1000, 5000, or 15000 people, respectively.
-  ** `all`, which will download all of the current country codes. This process may take some time.
+  ** a country code, which adds the country as GeoNames metacards in the core catalog. The full list of country codes available can be found in http://download.geonames.org/export/dump/countryInfo.txt.
+  ** `cities1000`, `cities5000`, and `cities15000`, which adds cities to the index that have at least 1000, 5000, or 15000 people, respectively.
+  ** `all`, which downloads all of the current country codes. This process may take some time.
 
 The `-c` or `--create` flag can be used to clear out the existing gazetteer metacards before adding new entries.
 
@@ -59,27 +59,27 @@ much quicker than for the entire catalog collection.
 ====  Installing Standalone Solr Offline Gazetteer
 
 The Standalone Solr Offline Gazetteer is not installed by default but can be installed by running
-`feature:install catalog-solr-offline-gazetteer`. This will install:
+`feature:install catalog-solr-offline-gazetteer`. This installs:
 
 * The plugin that intercepts gazetteer metacard creates/updates/deletes to the catalog collection
 (and stores them in the standalone solr gazetteer collection)
 * The gazetteer query service which registers the Query component that responds to requests from
 the UI gazetteer search box
-* The `offline-solr-gazetteer:removeall` command which will delete all records in the gazetteer
+* The `offline-solr-gazetteer:removeall` command which deletes all records in the gazetteer
 collection.
-* The `offline-solr-gazetteer:synccatalog` command which will sync with the catalog and update all
+* The `offline-solr-gazetteer:synccatalog` command which syncs with the catalog and updates all
 records in the gazetteer collection to reflect it (or add them if they are not yet
 created)
 
 ==== Special Note Regarding Installation
 
 If the Spatial Geocoding Offline Catalog bundle and the bundle using the Gazetteer query service
-(for example, Intrigue) are both already running, you will need to restart the bundles consuming the service
+(for example, Intrigue) are both already running, you must restart the bundles consuming the service
 (for example, Intrigue) in order to pick up the correct one.
 
 ==== Building the suggester index on Standalone Solr Offline Gazetteer
 
-The suggester index will be built when any of the other methods of building the catalog gazetteer
+The suggester index is built when any of the other methods of building the catalog gazetteer
 are run, along with on initial install. So you can run `gazetteer:build-suggester-index` or
 `offline-solr-gazetteer:build-suggester-index` to build the suggester.
 
