--- a/distribution/docs/src/main/resources/content/_reference/_tables/PolicyManager.adoc
+++ b/distribution/docs/src/main/resources/content/_reference/_tables/PolicyManager.adoc
@@ -19,7 +19,7 @@
 |Context Traversal Depth
 |traversalDepth
 |Integer
-|Depth to which paths will be traversed. Any value greater than 500 will be set to 500.
+|Depth to which paths are traversed. Any value greater than 500 is set to 500.
 |20
 |true
 
@@ -61,7 +61,7 @@
 |White Listed Contexts
 |whiteListContexts
 |String
-|List of contexts that will not use security. Note that sub-contexts to ones listed here will also skip security, unless authentication types are provided for it. For example: if /foo is listed here, then /foo/bar will also not require any sort of authentication. However, if /foo is listed and /foo/bar has authentication types provided in the 'Authentication Types' field, then that more specific policy will be used.
+|List of contexts that do not use security. Note that sub-contexts to ones listed here also skip security, unless authentication types are provided for it. For example: if /foo is listed here, then /foo/bar also does not require any sort of authentication. However, if /foo is listed and /foo/bar has authentication types provided in the 'Authentication Types' field, then that more specific policy is used.
 |${variable-prefix}org.codice.ddf.system.rootContext}/SecurityTokenService,${variable-prefix}org.codice.ddf.system.rootContext}/internal/metrics,/proxy,${variable-prefix}org.codice.ddf.system.rootContext}/saml,${variable-prefix}org.codice.ddf.system.rootContext}/idp,/idp,${variable-prefix}org.codice.ddf.system.rootContext}/platform/config/ui,/logout
 |true
 
