--- a/distribution/docs/src/main/resources/content/_reference/_tables/TikaInputTransformer.adoc
+++ b/distribution/docs/src/main/resources/content/_reference/_tables/TikaInputTransformer.adoc
@@ -19,7 +19,7 @@
 |Use Resource Title
 |useResourceTitleAsTitle
 |Boolean
-|Use the resource's metadata to determine the metacard title. If this is not enabled, the metacard title will be the file name.
+|Use the resource's metadata to determine the metacard title. If this is not enabled, the metacard title is the file name.
 |false
 |true
 
