--- a/distribution/docs/src/main/resources/content/_reference/_tables/Wfs_v1_1_0_Federated_Source.adoc
+++ b/distribution/docs/src/main/resources/content/_reference/_tables/Wfs_v1_1_0_Federated_Source.adoc
@@ -75,7 +75,7 @@
 |Non Queryable Properties
 |nonQueryableProperties
 |String
-|Properties listed here will NOT be queryable and any attempt to filter on these properties will result in an exception.
+|Properties listed here are NOT queryable and any attempt to filter on these properties results in an exception.
 |null
 |false
 
