--- a/distribution/docs/src/main/resources/content/_reference/_tables/Wfs_v2_0_0_Federated_Source.adoc
+++ b/distribution/docs/src/main/resources/content/_reference/_tables/Wfs_v2_0_0_Federated_Source.adoc
@@ -54,7 +54,7 @@
 |Disable Sorting
 |disableSorting
 |Boolean
-|When selected, the system will not specify sort criteria with the query. This should only be used if the remote source is unable to handle sorting even when the capabilities states 'ImplementsSorting' is supported.
+|When selected, the system does not specify sort criteria with the query. This should only be used if the remote source is unable to handle sorting even when the capabilities states 'ImplementsSorting' is supported.
 |false
 |true
 
@@ -82,7 +82,7 @@
 |Non Queryable Properties
 |nonQueryableProperties
 |String
-|Properties listed here will NOT be queryable and any attempt to filter on these properties will result in an exception.
+|Properties listed here are NOT queryable and any attempt to filter on these properties results in an exception.
 |null
 |false
 
