--- a/distribution/docs/src/main/resources/content/_reference/_tables/admin.ui.configuration.adoc
+++ b/distribution/docs/src/main/resources/content/_reference/_tables/admin.ui.configuration.adoc
@@ -40,14 +40,14 @@
 |Show System Usage Message once per session
 |systemUsageOncePerSession
 |Boolean
-|With this selected,the system usage message will be shown once for each browser session. Uncheck this to have the usage message appear every time the admin page is opened or refreshed.
+|With this selected,the system usage message is shown once for each browser session. Uncheck this to have the usage message appear every time the admin page is opened or refreshed.
 |true
 |true
 
 |Ignored Installer Applications
 |disabledInstallerApps
 |String
-|Comma delimited list (appName, appName2, ...appNameN) of applications that will be disabled in the installer.
+|Comma delimited list (appName, appName2, ...appNameN) of applications that are disabled in the installer.
 |admin-app,platform-app
 |null
 
