--- a/distribution/docs/src/main/resources/content/_reference/_tables/scheduler.Command.adoc
+++ b/distribution/docs/src/main/resources/content/_reference/_tables/scheduler.Command.adoc
@@ -26,7 +26,7 @@
 |Interval
 |intervalString
 |String
-|The Interval String for each execution. Based on the Interval Type, this will either be a Cron String or a Second Interval. (e.x. '0 0 0 1/1 * ? *' or '12')
+|The Interval String for each execution. Based on the Interval Type, this can be either a Cron String or a Second Interval. (e.x. '0 0 0 1/1 * ? *' or '12')
 |
 |true
 
