--- a/distribution/docs/src/main/resources/content/_using/using-simple-search-ui.adoc
+++ b/distribution/docs/src/main/resources/content/_using/using-simple-search-ui.adoc
@@ -19,7 +19,7 @@ It also allows the user to select the sources to search and the number of result
 
 Enter one or more of the available search criteria to execute a query:
 
-Keyword Search:: A text box allowing the user to enter a textual query. This supports the use of (*) wildcards. If blank, the query will contain a contextual component.
+Keyword Search:: A text box allowing the user to enter a textual query. This supports the use of (*) wildcards. If blank, the query contains a contextual component.
 Temporal Query:: Select from *any*, *relative*, or *absolute*. Selecting *Any* results in no temporal restrictions on the query, selecting *relative* allows the user to query a period from some length of time in the past until now, and selecting *absolute* allows the user to specify a *start* and *stop* date range.
 Spatial Search:: Select from *any*, *point-radius*, and *bounding box*. Selecting *Any* results in no spatial restrictions on the query, selecting *point-radius* allows the user to specify a *lat/lon* and *radius* to search, and selecting a *bounding box* allows the user to specify an *eastern*, *western*, *southern*, and *northern* boundary to search within.
 Type Search:: Select from *any*, or a specific type. Selecting *Any* results in no type restrictions on the query, and Selecting *Specific Types* shows a list of known content types on the federation, and allows the user to select a specific type to search for.
@@ -32,7 +32,7 @@ The table of results shows the details of the results found, as well as a link t
 
 ===== Results  Summary
 
-Total Results:: Total Number of Results available for this query. If there are more results than the number displayed per page then a page navigation links will appear to the right.
+Total Results:: Total Number of Results available for this query. If there are more results than the number displayed per page then a page navigation link appears to the right.
 Pages:: Provides page navigation, which generate queries for requesting additional pages of results.
 
 ===== Results Table
@@ -40,7 +40,7 @@ Pages:: Provides page navigation, which generate queries for requesting addition
 The Results table provides a preview of and links to the results.
 The table consists of these columns:
 
-Title:: Displays title of the metacard. This will be a link which can clicked to view the metacard in the Metacard View.
+Title:: Displays title of the metacard. This is a link which can clicked to view the metacard in the Metacard View.
 Source:: Displays where the metadata came from, which could be the local provider or a federated source.
 Location:: Displays the WKT Location of the metacard, if available.
 Time:: Shows the Received (Created) and Effective times of the metacard, if available.
