--- a/distribution/docs/src/main/resources/content/_managing/_configuring/securing-admin-console.adoc
+++ b/distribution/docs/src/main/resources/content/_managing/_configuring/securing-admin-console.adoc
@@ -2,7 +2,7 @@
 :type: configuration
 :status: published
 :parent: Configuring User Access
-:summary: Introduction to the ${admin-console}.
+:summary: Restricting User Access to ${admin-console}
 :order: 05
 
 == {title}
@@ -23,33 +23,3 @@ To set access restrictions on the ${admin-console}, consult the organization's s
 .. If your infrastructure supports multiple <<{reference-prefix}org.codice.ddf.security.policy.context.impl.PolicyManager,authentication methods>>, you may specify them here.
 .. Role requirements may be enforced by configuring the <<{reference-prefix}org.codice.ddf.security.policy.context.impl.PolicyManager,required attributes>> for a given context.
 .. The <<{reference-prefix}org.codice.ddf.security.policy.context.impl.PolicyManager,white listed contexts>> allows child contexts to be excluded from the authentication constraints of their parents.
-
-=== Restricting Feature, App, Service, and Configuration Access
-
-* *{hardening-step}*
-
-Limit access to the individual applications, features, or services to those users who need access.
-Organizational requirements should dictate which applications are restricted and the extent to which they are restricted.
-
-. Navigate to the *${admin-console}*.
-. Select the *${ddf-admin}* application.
-. Select the *Configuration* tab.
-. Select the *Admin Configuration Policy*.
-. To add a feature or app permission:
-.. Add a new field to "Feature and App Permissions" in the format of:
-+
-`<feature name>/<app name> = "attribute name=attribute value","attribute name2=attribute value2", ...`
-+
-.. For example, to restrict access of any user without an admin role to the catalog-app:
-+
-`catalog-app = "http://schemas.xmlsoap.org/ws/2005/05/identity/claims/role=admin", ...`
-+
-. To add a configuration permission:
-.. Add a new field to "Configuration Permissions" in the format of:
-+
-`configuration id = "attribute name=attribute value","attribute name2=attribute value2", ...`
-.. For example, to restrict access of any user without an admin role to the Web Context Policy Manager:
-+
-`org.codice.ddf.security.policy.context.impl.PolicyManager="http://schemas.xmlsoap.org/ws/2005/05/identity/claims/role=admin"`
-
-If a permission is specified, any user without the required attributes is unable to see or modify the feature, app, or configuration.
